enable mass presigned download support (#43)
* enable mass presign support

* fix

* fix indent

* update swagger

* update method

* stuff

* check a few of them
